# tt2-api

./: pyproject.toml
data/: raw_skill_data.tsv
data/json/: abilities.json  heroes.json
data/json/abilities/: deadly-strike.json  fire-sword.json  hand-of-midas.json  heavenly-strike.json  shadow-clone.json  war-cry.json
data/json/heroes/: aya-the-lightning-violet.json  beany-sprout-the-1st.json  boomoh-doctor.json  captain-davey-cannon.json  cosette-jewel-of-house-sabre.json  damon-of-the-darkness.json  dex-1000.json  finn-the-funny-guard.json  gulbrand-the-destroyer.json  jayce-the-ruthless-cutter.json  jazz-rockerfellow.json  kiki-the-dragon-rider.json  kin-the-puffy-beast.json  kronus-bringer-of-judgement.json  lady-lucy-the-night-caster.json  lala-quickshot.json  lance-knight-of-cobalt-steel.json  lil-ursa.json  maddie-shadow-thief.json  maple-the-autumn-guardian.json  maya-muerta-the-watcher.json  miki-the-graceful-dancer.json  mina-the-priestess-of-light.json  nohni-the-spearit.json  pingo-of-the-tori.json  (+12 more)
data/raw/: abilities.tsv  heroes.tsv  reductions-dmg.tsv  reductions-gold.tsv  skills.tsv
data/skills/: angelic-radiance.json  astral-awakening.json  barbaric-fury.json  chivalric-order.json  dimensional-shift.json  forbidden-contract.json  heart-of-midas.json  heroic-might.json  lightning-strike.json  master-thief.json  pet-evolution.json  phantom-vengeance.json  soul-blade.json  spoils-of-war.json  summon-inferno.json
scripts/: abilities.py  heroes.py  reductions.py  skills.py  tsv_to_json.py  util.py
src/tt2tools_api/: build_stats.py  main.py
(+70 files in other folders)
