[tool.poetry]
name = "tt2tools-api"
version = "0.1.0-alpha.0"
description = ""
authors = ["Tom Stockwell <2060486+stocky37@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "tt2tools-api", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
