[tool.poetry]
name = "tt2tools-api"
version = "0.1.0-alpha.0"
description = ""
authors = ["Tom Stockwell <2060486+stocky37@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "tt2tools_api", from = "src" },
]

[tool.poetry.scripts]
start = "tt2tools_api.main:main"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
python-slugify = "^4.0.1"
inflection = "^0.5.0"
anytree = "^2.8.0"
pydash = "^4.8.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
pre-commit = "^2.6.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
